@@ -98,34 +98,13 @@
        	</item>
       </section>
       <section>
-        <submenu>
-          <attribute name='label' translatable='yes'>_Preferences</attribute>
-          <item>
-            <attribute name='label'
-              translatable='yes'>_Settings…</attribute>
-            <attribute name='action'>win.settings</attribute>
-          </item>
-          <item>
-            <attribute name='label'
-              translatable='yes'>_Toolbars…</attribute>
-            <attribute name='action'>win.toolbars</attribute>
-          </item>
-          <item>
-            <attribute name='label'
-              translatable='yes'>_Identities…</attribute>
-            <attribute name='action'>win.identities</attribute>
-          </item>
-        </submenu>
+        <item>
+          <attribute name='label'
+            translatable='yes'>Empty _Trash</attribute>
+          <attribute name='action'>win.empty-trash</attribute>
+        </item>
       </section>
       <section>
-        <item>
-          <attribute name='label' translatable='yes'>_Help</attribute>
-          <attribute name='action'>win.help</attribute>
-        </item>
-        <item>
-          <attribute name='label' translatable='yes'>_About Balsa</attribute>
-          <attribute name='action'>win.about</attribute>
-        </item>
         <item>
           <attribute name='label' translatable='yes'>_Quit</attribute>
           <attribute name='action'>win.quit</attribute>
@@ -185,6 +164,26 @@
             translatable='yes'>_Export Filters…</attribute>
           <attribute name='action'>win.export-filters</attribute>
         </item>
+      </section>
+      <section>
+        <submenu>
+          <attribute name='label' translatable='yes'>_Preferences</attribute>
+          <item>
+            <attribute name='label'
+              translatable='yes'>_Settings…</attribute>
+            <attribute name='action'>win.settings</attribute>
+          </item>
+          <item>
+            <attribute name='label'
+              translatable='yes'>_Toolbars…</attribute>
+            <attribute name='action'>win.toolbars</attribute>
+          </item>
+          <item>
+            <attribute name='label'
+              translatable='yes'>_Identities…</attribute>
+            <attribute name='action'>win.identities</attribute>
+          </item>
+        </submenu>
       </section>
     </submenu>
     <submenu>
@@ -399,13 +398,6 @@
       <section>
         <item>
           <attribute name='label'
-            translatable='yes'>Empty _Trash</attribute>
-          <attribute name='action'>win.empty-trash</attribute>
-        </item>
-      </section>
-      <section>
-        <item>
-          <attribute name='label'
             translatable='yes'>Select _Filters…</attribute>
           <attribute name='action'>win.select-filters</attribute>
         </item>
@@ -537,6 +529,19 @@
               translatable='yes'>_Store Address…</attribute>
           <attribute name='action'>win.store-address</attribute>
           <attribute name='accel'>s</attribute>
+        </item>
+      </section>
+    </submenu>
+    <submenu>
+      <attribute name='label' translatable='yes'>_Help</attribute>
+      <section>
+        <item>
+          <attribute name='label' translatable='yes'>_Contents</attribute>
+          <attribute name='action'>win.help</attribute>
+        </item>
+        <item>
+          <attribute name='label' translatable='yes'>_About Balsa</attribute>
+          <attribute name='action'>win.about</attribute>
         </item>
       </section>
     </submenu>
